tests/semantic/comp_nonexistent_type/comp_nonexistent_type.dl


.comp CallGraph {
    .decl CallGraphEdge(caller: number, callee: number) output
}

.comp CHACallGraph : CallGraph {
    CallGraphEdge(1, 2).
    CallGraphEdge(2, 3).
    CallGraphEdge(3, 4).
    CallGraphEdge(3, 2).
}

.comp CICallGraph : CallGraph {
    CallGraphEdge(1, 2).
    CallGraphEdge(2, 1).
}

.comp Main<CallGraphFlavour> {
    .init cg = TThatDoesNotExist
    .decl TwoWays(x: number, y: number) output
    TwoWays(x, y) :- 
        cg.CallGraphEdge(x, y), 
        cg.CallGraphEdge(y, x).
}

.init cha_main = Main<CICallGraph>
